@@ -5,6 +5,7 @@
 - Bugfix / Change: Configured debug methods are now checked on
   configuration loading.
 - Bugfix: Preserve the line breaks from the string-extra.
+- Bugfix: Repair the UndeclaredProperty class and use it.
 
 3.0.0
 - Added 'is' and 'has' to the getter analysis.
